<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <string name="app_name" translatable="false">Dirty Tweaks</string>
    <string name="hide_app_icon">Hide app</string>
    <string name="features_not_available">No features available for this category at the moment</string>

    <!-- Bottom navigation -->
    <string name="bottom_nav_system_title">System</string>
    <string name="bottom_nav_lockscreen_title">Lockscreen</string>
    <string name="bottom_nav_statusbar_title">Statusbar</string>
    <string name="bottom_nav_navigation_title">Navigation</string>
    <string name="bottom_nav_multitasking_title">Multitasking</string>

    <!-- Categories -->
    <!-- System -->
    <string name="device_extras_title">Device extras</string>
    <string name="device_extras_summary">Tweaks specific to your device</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="miscellaneous_summary">Tweaks that do not fit in other categories</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_summary">Configure power menu options such as flashlight, airplane mode or screenshot</string>
    <!-- Lockscreen -->
    <string name="fingerprint_prefs_title">Fingerprint prefs</string>
    <string name="fingerprint_prefs_summary">Tweaks specific to the fingerprint scanner</string>
    <string name="lockscreen_items_title">Lockscreen items</string>
    <string name="lockscreen_items_summary">Remove or add items to your lockscreen</string>
    <!-- Statusbar -->
    <string name="battery_options_title">Battery options</string>
    <string name="battery_options_summary">Customize the statusbar or QS tile battery</string>
    <string name="carrier_label_title">Carrier label</string>
    <string name="carrier_label_summary">Customize your statusbar carrier label</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_options_summary">Customize your statusbar clock</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Tweaks specific to system notifications</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="quicksettings_summary">Configure the quick settings with options ranging from headers to weather</string>
    <string name="statusbar_items_title">Statusbar items</string>
    <string name="statusbar_items_summary">Configure the visibility of statusbar items</string>
    <string name="ticker_title">Ticker</string>
    <string name="ticker_summary">Enable the statusbar ticker and configure ticker related tweaks</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="traffic_summary">Enable traffic indicators on the statusbar and configure traffic related tweaks</string>
    <!-- Navigation -->
    <string name="buttons_title">Buttons</string>
    <string name="buttons_summary">Configure hardware keys and/or volume rocker options</string>
    <string name="navigationbar_title">Navigation bar</string>
    <string name="navigationbar_summary">Configure smartbar, fling or pulse</string>
    <!-- Multitasking -->
    <string name="headsup_title">Heads up</string>
    <string name="headsup_summary">Configure heads up options</string>
    <string name="omniswitch_title">Omniswitch</string>
    <string name="omniswitch_summary">Configure OmniSwitch options</string>
    <string name="recents_title">Recents</string>
    <string name="recents_summary">Configure OmniSwitch or AOSP recents</string>

</resources>
