<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/system"
        android:icon="@drawable/bottomnav_system"
        android:title="@string/bottom_nav_system_title"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/lockscreen"
        android:icon="@drawable/bottomnav_lockscreen"
        android:title="@string/bottom_nav_lockscreen_title"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/statusbar"
        android:icon="@drawable/bottomnav_statusbar"
        android:title="@string/bottom_nav_statusbar_title"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/navigation"
        android:icon="@drawable/bottomnav_navigation"
        android:title="@string/bottom_nav_navigation_title"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/multitasking"
        android:icon="@drawable/bottomnav_multitasking"
        android:title="@string/bottom_nav_multitasking_title"
        app:showAsAction="ifRoom|withText"/>

</menu>